# ai-platform-apps

./: .gitignore  CLAUDE.md  README.md
app-manager/: pyproject.toml
app-manager/app_manager/: __init__.py  app.py  cli.py  installer.py  runner.py
apps/doc-reader/: app.json
apps/dubbing-studio/: app.json
apps/meetcore/: .env.example  .gitignore  Dockerfile.root.bak  README.md  ROADMAP.md  app.json  docker-compose.yml
apps/meetcore/backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
apps/meetcore/backend/asr/: router.py  service.py
apps/meetcore/backend/asr/providers/: __init__.py  parakeet.py  whisper_cpp.py
apps/meetcore/backend/chat/: __init__.py  models.py  router.py  service.py
apps/meetcore/backend/core/: config.py  db.py  logging.py  models.py
apps/meetcore/backend/meetings/: models.py  repository.py  router.py  schemas.py  service.py  storage.py
apps/meetcore/backend/shared/: __init__.py  config.py  geniex_client.py  litellm_client.py  mcp_server.py
apps/meetcore/backend/tests/: __init__.py  conftest.py  test_mcp.py  test_meetings.py  test_process.py  test_storage.py  test_transcript.py
apps/meetcore/backend/transcript/: models.py  processor.py  prompts.py  router.py  service.py
apps/meetcore/backend/transcript/providers/: __init__.py  base.py  geniex.py  litellm.py  nexa.py  ollama.py
apps/meetcore/backend/tts/: __init__.py  models.py  router.py  service.py
docs/: ARCHITECTURE.md  DECISIONS.md  MEETCORE-REBUILD.md  MODULES.md  REFERENCES.md  ROADMAP.md  app-schema.json
scripts/: setup.sh
(+26 files in other folders)
