[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-platform-apps"
version = "0.1.0"
description = "AI Platform App Manager - modular app manager CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
ai-apps = "app_manager.cli:app"
